k8s-configs/cluster-tools/base/git-ops/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      Include /etc/nginx/owasp-modsecurity-crs/nginx-modsecurity.conf
      SecRuleEngine DetectionOnly
      SecRequestBodyAccess On
      SecAuditEngine RelevantOnly
      SecAuditLogParts ABCDEFGHIJKZ
      SecAuditLogType Serial
      SecAuditLogFormat JSON
      SecAuditLog /dev/stdout
spec:
  ingressClassName: nginx-public
  tls:
    - hosts:
        - argocd-dev.ping-demo.com
  rules:
    - host: argocd-dev.ping-demo.com
      http:
        paths:
          # This rule gives external access to the PingFederate admin service
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
